Fixed Intro Image & Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,8 @@ nav {
 @media (min-width: 600px) {
   .intro {
     display: grid;
+    width: min-content;
+    margin: 0 auto;
     grid-column-gap: 1em;
     grid-template-areas:
       "img title"
@@ -223,4 +225,9 @@ nav {
   .service + .service {
     margin-left: 2em;
   }
+}
+
+.about-me {
+  max-width: 1000px;
+  margin: 0 auto;
 }
